--- a/automations/inovelli_mmwave_normal_mode_sync_input_select.yaml
+++ b/automations/inovelli_mmwave_normal_mode_sync_input_select.yaml
@@ -10,6 +10,7 @@ triggers:
       - input_select.basement_server_room_mmwave_normal_mode
       - input_select.basement_movie_room_mmwave_normal_mode
       - input_select.basement_bathroom_mmwave_normal_mode
+      - input_select.basement_staircase_mmwave_normal_mode
     trigger: state
 conditions: []
 actions:
@@ -35,6 +36,9 @@ actions:
                   select.basement_movie_inovelli_presence_mmwavecontrolwireddevice
                 {% elif trigger.entity_id == 'input_select.basement_bathroom_mmwave_normal_mode' %}
                   select.basement_bathroom_vanity_inovelli_presence_mmwavecontrolwireddevice
+                {% elif trigger.entity_id == 'input_select.basement_staircase_mmwave_normal_mode' %}
+                  select.basement_upper_staircase_inovelli_presence_mmwavecontrolwireddevice,
+                  select.basement_lower_staircase_inovelli_presence_mmwavecontrolwireddevice
                 {% else %}
                   none
                 {% endif %}
