--- a/automations/occupancy-based-lighting/light_inovelli_primary_bathroom_motion_cleared_lights_off.yaml
+++ b/automations/occupancy-based-lighting/light_inovelli_primary_bathroom_motion_cleared_lights_off.yaml
@@ -8,12 +8,53 @@ triggers:
         and is_state('binary_sensor.upstairs_primary_bath_shower_inovelli_presence_occupancy', 'off')
         and is_state('binary_sensor.upstairs_primary_bath_night_light_occupancy', 'off')
       }}
-    for: "00:02:00"
 conditions: []
 actions:
+  - condition: template
+    value_template: |
+      {# Only run when hold is clear on BOTH switches #}
+      {% set manual = states('input_text.inovelli_manual_hold') | int(85) %}
+      {% set auto = states('input_text.inovelli_auto_hold') | int(0) %}
+      {% set led_vanity = states('number.upstairs_primary_bath_vanity_inovelli_presence_defaultled1colorwhenon') | int(-1) %}
+      {% set led_shower = states('number.upstairs_primary_bath_shower_inovelli_presence_defaultled1colorwhenon') | int(-1) %}
+      {{ led_vanity != manual and led_vanity != auto and led_shower != manual and led_shower != auto }}
+  - delay: >-
+      {# Choose delay helper based on which lights are currently on #}
+      {% set full_room_on =
+        is_state('light.upstairs_primary_bath_lights', 'on')
+        or is_state('light.upstairs_primary_bath_fan_light_inovelli_on_off', 'on')
+        or is_state('light.upstairs_primary_bath_shower_inovelli_presence', 'on')
+      %}
+      {% set helper = 'input_select.upstairs_primary_bathroom_shower_occupancy_off_delay' if full_room_on else 'input_select.upstairs_primary_bathroom_vanity_occupancy_off_delay' %}
+      {% set raw = states(helper) %}
+      {% set d = (raw | replace('"','') | replace("'","") | trim) %}
+      {% if d in ['unknown','unavailable',''] %}
+        {{ '00:02:00' if full_room_on else '00:00:00' }}
+      {% else %}
+        {{ d }}
+      {% endif %}
+  - condition: template
+    value_template: |
+      {{
+        is_state('binary_sensor.upstairs_primary_bath_vanity_inovelli_presence_occupancy', 'off')
+        and is_state('binary_sensor.upstairs_primary_bath_shower_inovelli_presence_occupancy', 'off')
+        and is_state('binary_sensor.upstairs_primary_bath_night_light_occupancy', 'off')
+      }}
+  - condition: template
+    value_template: |
+      {# Re-check hold after delay #}
+      {% set manual = states('input_text.inovelli_manual_hold') | int(85) %}
+      {% set auto = states('input_text.inovelli_auto_hold') | int(0) %}
+      {% set led_vanity = states('number.upstairs_primary_bath_vanity_inovelli_presence_defaultled1colorwhenon') | int(-1) %}
+      {% set led_shower = states('number.upstairs_primary_bath_shower_inovelli_presence_defaultled1colorwhenon') | int(-1) %}
+      {{ led_vanity != manual and led_vanity != auto and led_shower != manual and led_shower != auto }}
   - action: light.turn_off
     metadata: {}
     target:
-      entity_id: light.upstairs_primary_bath_vanity_inovelli_presence
+      entity_id:
+        - light.upstairs_primary_bath_vanity_inovelli_presence
+        - light.upstairs_primary_bath_shower_inovelli_presence
+        - light.upstairs_primary_bath_fan_light_inovelli_on_off
+        - light.upstairs_primary_bath_lights
     data: {}
-mode: single
+mode: restart
