--- a/cards/basement/staircase/basement-staircase-history.yaml
+++ b/cards/basement/staircase/basement-staircase-history.yaml
@@ -22,11 +22,9 @@ cards:
       tap_action:
         action: navigate
         navigation_path: "#basement-staircase-advanced"
-
   - type: markdown
     content: |
       ## Basement Staircase
-
   - type: custom:bubble-card
     card_type: sub-buttons
     sub_button:
@@ -35,7 +33,8 @@ cards:
         - name: Sensors
           buttons_layout: inline
           group:
-            - entity: binary_sensor.basement_upper_staircase_inovelli_presence_occupancy
+            - entity: >-
+                binary_sensor.basement_upper_staircase_inovelli_presence_occupancy
               name: Upper mmWave
               show_name: true
               show_state: true
@@ -44,7 +43,8 @@ cards:
               content_layout: icon-top
               custom_height: 60
               show_icon: true
-            - entity: binary_sensor.basement_lower_staircase_inovelli_presence_occupancy
+            - entity: >-
+                binary_sensor.basement_lower_staircase_inovelli_presence_occupancy
               name: Lower mmWave
               show_name: true
               show_state: true
@@ -102,7 +102,6 @@ cards:
     attribute: friendly_name
     rows: 3.44
     show_header_toggle: false
-
   - type: history-graph
     entities:
       - entity: binary_sensor.basement_upper_staircase_inovelli_presence_occupancy
@@ -114,7 +113,6 @@ cards:
     hours_to_show: 1
     grid_options:
       columns: full
-
   - type: markdown
     content: >
       {% set manual = states('input_text.inovelli_manual_hold') | int(85) %} {%
@@ -126,10 +124,10 @@ cards:
       states('number.basement_lower_staircase_inovelli_presence_defaultled1colorwhenon')
       | int(-1) %}
 
-      {% set upper_hold = 'Manual Hold' if led1_upper == manual else ('Auto Hold'
-      if led1_upper == auto else 'Clear') %} {% set lower_hold = 'Manual Hold' if
-      led1_lower == manual else ('Auto Hold' if led1_lower == auto else 'Clear')
-      %}
+      {% set upper_hold = 'Manual Hold' if led1_upper == manual else ('Auto
+      Hold' if led1_upper == auto else 'Clear') %} {% set lower_hold = 'Manual
+      Hold' if led1_lower == manual else ('Auto Hold' if led1_lower == auto else
+      'Clear') %}
 
       {% if upper_hold == 'Manual Hold' or lower_hold == 'Manual Hold' %}
         {% set hold_label = 'Manual Hold' %}
@@ -162,15 +160,15 @@ cards:
         {% set off_vals.out = off_vals.out ~ ('， ' if i > 1 else '') ~ v %}
       {% endfor %}
 
-      <ha-icon icon="mdi:lock-check"></ha-icon> **Manual/Auto Hold (shared):** {{
-      hold_label }}{% if upper_hold != lower_hold %} (Upper={{ upper_hold }},
+      <ha-icon icon="mdi:lock-check"></ha-icon> **Manual/Auto Hold (shared):**
+      {{ hold_label }}{% if upper_hold != lower_hold %} (Upper={{ upper_hold }},
       Lower={{ lower_hold }}){% endif %}
 
       <ha-icon icon="mdi:motion-sensor"></ha-icon> **mmWave Mode (helper):** {{
       mmwave_helper }}
 
-      <ha-icon icon="mdi:motion-sensor-outline"></ha-icon> **mmWave Mode (devices):**
-      Upper={{ mmwave_upper }}, Lower={{ mmwave_lower }}
+      <ha-icon icon="mdi:motion-sensor-outline"></ha-icon> **mmWave Mode
+      (devices):** Upper={{ mmwave_upper }}, Lower={{ mmwave_lower }}
 
       <ha-icon icon="mdi:palette"></ha-icon> **LED ON Colors (1–7):** {{
       on_vals.out }}
@@ -178,22 +176,30 @@ cards:
       <ha-icon icon="mdi:palette-outline"></ha-icon> **LED OFF Colors (1–7):**
       {{ off_vals.out }}
 
-      {% set hold_upper_s = states('number.basement_upper_staircase_inovelli_presence_mmwaveholdtime') | float(0) %}
-      {% set stay_upper_raw = states('number.basement_upper_staircase_inovelli_presence_mmwavestaylife') | float(0) %}
-      {% set stay_upper_s = stay_upper_raw / 20 %}
-      {% set mmwave_upper_s = hold_upper_s + stay_upper_s %}
+      {% set hold_upper_s =
+      states('number.basement_upper_staircase_inovelli_presence_mmwaveholdtime')
+      | float(0) %} {% set stay_upper_raw =
+      states('number.basement_upper_staircase_inovelli_presence_mmwavestaylife')
+      | float(0) %} {% set stay_upper_s = stay_upper_raw / 20 %} {% set
+      mmwave_upper_s = hold_upper_s + stay_upper_s %}
 
-      {% set hold_lower_s = states('number.basement_lower_staircase_inovelli_presence_mmwaveholdtime') | float(0) %}
-      {% set stay_lower_raw = states('number.basement_lower_staircase_inovelli_presence_mmwavestaylife') | float(0) %}
-      {% set stay_lower_s = stay_lower_raw / 20 %}
-      {% set mmwave_lower_s = hold_lower_s + stay_lower_s %}
+      {% set hold_lower_s =
+      states('number.basement_lower_staircase_inovelli_presence_mmwaveholdtime')
+      | float(0) %} {% set stay_lower_raw =
+      states('number.basement_lower_staircase_inovelli_presence_mmwavestaylife')
+      | float(0) %} {% set stay_lower_s = stay_lower_raw / 20 %} {% set
+      mmwave_lower_s = hold_lower_s + stay_lower_s %}
 
       {% set mmwave_delay_s = [mmwave_upper_s, mmwave_lower_s] | max %}
 
-      <ha-icon icon="mdi:timer-sand"></ha-icon> **Switch Clear Delay:** max( Upper={{ hold_upper_s | round(1) }} + ({{ stay_upper_raw | round(0) }} / 20) ≈ {{ mmwave_upper_s | round(1) }}s, Lower={{ hold_lower_s | round(1) }} + ({{ stay_lower_raw | round(0) }} / 20) ≈ {{ mmwave_lower_s | round(1) }}s ) = {{ mmwave_delay_s | round(1) }}s
+      <ha-icon icon="mdi:timer-sand"></ha-icon> **Switch Clear Delay:** max(
+      Upper={{ hold_upper_s | round(1) }} + ({{ stay_upper_raw | round(0) }} /
+      20) ≈ {{ mmwave_upper_s | round(1) }}s, Lower={{ hold_lower_s | round(1)
+      }} + ({{ stay_lower_raw | round(0) }} / 20) ≈ {{ mmwave_lower_s | round(1)
+      }}s ) = {{ mmwave_delay_s | round(1) }}s
 
-      <ha-icon icon="mdi:information-outline"></ha-icon> **Note:** occupancy won’t report **off** until each switch’s mmWave clear delay elapses.
-
+      <ha-icon icon="mdi:information-outline"></ha-icon> **Note:** occupancy
+      won’t report **off** until each switch’s mmWave clear delay elapses.
   - type: custom:bubble-card
     card_type: sub-buttons
     sub_button:
@@ -215,11 +221,10 @@ cards:
               show_state: true
               content_layout: icon-left
       bottom_layout: rows
-    rows: 1
+    rows: 0.94
     modules:
       - my_module
     show_header_toggle: false
-
   - type: custom:bubble-card
     card_type: sub-buttons
     sub_button:
